@@ -6,6 +6,7 @@ Changelog:
 - Fixed Brood of Nozdormu rep rings not showing up in Solo route
 - Fixed 'Quest Completion' warnings not showing up for Brood of Nozdormu rep ring quests
 - Fixed Optional quests not checking if actual quest objectives are done, before turning green
+- Added Tooltips to items that are used in TBCPrep routes (Can be toggled in settings)
 
 3.10
 - Fixed lua error with comment
